# phrust

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  PHASE9.md  README.md  deny.toml  flake.nix  justfile  prompts.md  sonar-project.properties
.cargo/: config.toml
.codex/: config.toml  hooks.json
.githooks/: pre-commit  pre-push
crates/php_bench/: Cargo.toml
crates/php_bench/benches/: perf_hotpaths.rs  phase7_hotpaths.rs
crates/php_bench/src/: lib.rs
crates/php_bytecode_cache/: Cargo.toml
crates/php_bytecode_cache/src/: lib.rs
crates/php_ir/: Cargo.toml
crates/php_ir/src/: block.rs  builder.rs  compilation.rs  constants.rs  display.rs  function.rs  ids.rs  instruction.rs  lib.rs  literal_text.rs  lower.rs  module.rs  operand.rs  rule_selection.rs  source_map.rs  verify.rs
crates/php_ir/src/lower/: declarations.rs  expressions.rs  mod.rs  session.rs  statements.rs  tests.rs
crates/php_ir/tests/: bytecode_snapshots.rs
crates/php_runtime/: Cargo.toml
crates/php_runtime/src/: array.rs  autoload.rs  builtins.rs  callable.rs  context.rs  convert.rs  datetime.rs  diagnostic.rs  error_output.rs  fiber.rs  gc.rs  generator.rs  globals.rs  ini.rs  jit_array.rs  layout_stats.rs  lib.rs  native_ops.rs  numeric_string.rs  object.rs  output.rs  pcre.rs  phar.rs  reference.rs  request_state.rs  resource.rs  runtime_memory.rs  serialization.rs  session.rs  sqlite.rs  status.rs  string.rs  todo_phase4.rs  todo_runtime.rs  tokenizer.rs  types.rs  value.rs  xml.rs  xml_backend.rs
crates/php_runtime/src/builtins/: context.rs  error.rs  mod.rs  registry.rs  request_state.rs  signatures.rs
crates/php_runtime/src/builtins/modules/: apcu.rs  array_intrinsics.rs  arrays.rs  bcmath.rs  calendar.rs  core.rs  ctype.rs  curl.rs  date.rs  debug_output.rs  exif.rs  fileinfo.rs  filesystem.rs  filter.rs  ftp.rs  gd.rs  gettext.rs  gmp.rs  hash.rs  iconv.rs  igbinary.rs  imap.rs  intl.rs  json.rs  json_fast.rs  ldap.rs  math.rs  mbstring.rs  memcached.rs  mod.rs  msgpack.rs  mysqli.rs  opcache.rs  openssl.rs  pcntl.rs  pcre.rs  pdo.rs  pgsql.rs  posix.rs  readline.rs  (+18 more)
crates/php_runtime/src/builtins/modules/core/: encoding.rs  serialization.rs
crates/php_runtime/src/db/: mod.rs  mysql.rs  postgres.rs
crates/php_runtime/src/object/: mod.rs  storage.rs  tests.rs  types.rs
crates/php_runtime/tests/: layout_stats_disabled_by_default.rs
crates/php_testkit/: Cargo.toml
crates/php_testkit/src/: compatibility.rs  diff.rs  fixtures.rs  lib.rs  normalize_output.rs  phase5.rs  phpt.rs  runtime_fixture.rs  runtime_reference.rs  runtime_semantics.rs  semantic_reference.rs
crates/php_vm/: Cargo.toml
crates/php_vm/src/: aliasing.rs  compiled_unit.rs  copy_patch_bridge.rs  counters.rs  deopt.rs  dependency_units.rs  error.rs  exit_policy.rs  fallback.rs  frame.rs  frame_memory.rs  include.rs  inline_cache.rs  last_use.rs  lib.rs  literal_pool.rs  osr.rs  persistent_feedback.rs  quickening.rs  std_builtins.rs  test_include_compiler.rs  tiering.rs  todo_phase4.rs  todo_runtime.rs  vm.rs
crates/php_vm/src/bytecode/: mod.rs
crates/php_vm/src/counters/: native_counters.rs
crates/php_vm/src/include/: cache.rs  compiled_cache.rs  diagnostics.rs  mod.rs  resolution_cache.rs  resolver.rs  tests.rs
crates/php_vm/src/inline_cache/: method_peek.rs
crates/php_vm/src/vm/: arguments.rs  builtin_adapter.rs  builtin_array_callbacks.rs  builtin_array_sort.rs  builtin_callback_validation.rs  builtin_callbacks.rs  builtin_classes.rs  builtin_intrinsics.rs  builtin_pcre_callbacks.rs  builtins.rs  calls.rs  class_context.rs  class_operations.rs  class_relations.rs  class_validation.rs  closure_operations.rs  dense_activation.rs  dense_dispatch.rs  dense_method_dispatch.rs  dense_runtime_adapters.rs  dense_scalar_handlers.rs  diagnostics.rs  dim_execution_support.rs  direct_call_binding.rs  dispatch_contract.rs  exception_dispatch.rs  execution_control.rs  execution_optimization.rs  execution_state.rs  execution_tiering.rs  ext_redis.rs  generator_fiber.rs  include_execution.rs  inline_cache_access.rs  instrumentation.rs  jit_abi.rs  jit_state.rs  layout_source.rs  method_cache_metadata.rs  method_dispatch.rs  (+27 more)
crates/php_vm/src/vm/jit_abi/: call_dispatch.rs  call_support.rs  diagnostic_helpers.rs  diagnostics.rs  dynamic_code.rs  dynamic_units.rs  frame_arena.rs  native_builtins.rs  request_state.rs  root_index.rs  runtime_ops.rs  telemetry.rs  tests.rs
crates/php_vm/src/vm/jit_abi/semantic_dispatch/: mod.rs
docs/: README.md  array-fast-paths-phase7.md  autoload-lookup-cache-phase7.md  benchmark-corpus-phase7.md  bytecode-cache-phase7.md  cache-architecture.md  cli.md  compatibility-governance.md  compatibility.md  composer-compatibility-phase6.md  contributing.md  cranelift-abi-phase7.md  (+213 more)
(+2735 files in other folders)
