[workspace]
resolver = "3"
members = [
    "crates/php_lexer",
    "crates/php_lexer_cli",
    "crates/php_parser_cli",
    "crates/php_source",
    "crates/php_syntax",
    "crates/php_testkit",
]

[workspace.package]
edition = "2024"
license = "MIT OR Apache-2.0"
rust-version = "1.95"

[profile.dev]
debug = "line-tables-only"
incremental = false
codegen-units = 256

[profile.dev.build-override]
debug = false
codegen-units = 256

[profile.dev.package."*"]
debug = false

[profile.test]
debug = "line-tables-only"
incremental = false
codegen-units = 256

[profile.test.build-override]
debug = false
codegen-units = 256

[profile.test.package."*"]
debug = false
