[package]
name = "php_bytecode_cache"
version = "0.0.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
crc32fast = "1.4"
php_ir = { path = "../php_ir" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"

[dev-dependencies]
php_semantics = { path = "../php_semantics" }
php_vm = { path = "../php_vm" }
