[package]
name = "php_ir"
version = "0.0.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
php_semantics = { path = "../php_semantics" }
php_source = { path = "../php_source" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
php_testkit = { path = "../php_testkit" }
