[package]
name = "php_vm"
version = "0.0.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
php_ir = { path = "../php_ir" }
php_runtime = { path = "../php_runtime" }
php_semantics = { path = "../php_semantics" }
php_source = { path = "../php_source" }

[dev-dependencies]
php_testkit = { path = "../php_testkit" }
