[package]
name = "php_vm"
version = "0.0.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[features]
default = []
jit-cranelift = ["dep:php_jit", "php_jit/jit-cranelift"]

[dependencies]
php_ir = { path = "../php_ir", version = "0.0.0" }
php_jit = { path = "../php_jit", version = "0.0.0", optional = true }
php_optimizer = { path = "../php_optimizer", version = "0.0.0" }
php_runtime = { path = "../php_runtime", version = "0.0.0" }
php_semantics = { path = "../php_semantics", version = "0.1.0" }
php_source = { path = "../php_source", version = "0.0.0" }
php_std = { path = "../php_std", version = "0.0.0" }
zip = { version = "2", default-features = false, features = ["deflate"] }

[dev-dependencies]
php_testkit = { path = "../php_testkit", version = "0.0.0" }
